crates/linear_type/tests/compile_fail/parts_non_exhaustive.rs
use linear_type::parts;

struct Abc {
    a: String,
}

parts! {
    #[non_exhaustive]
    impl Abc {
        a: String,
    }
}

fn main() {}
